# FUBIOSC

./: .gitignore  CMakeLists.txt  README.md
Fubi/: Fubi.cpp  Fubi.h  FubiConfig.h  FubiCore.cpp  FubiCore.h  FubiImageProcessing.cpp  FubiImageProcessing.h  FubiUtils.h
Fubi_CS_Wrapper/: Fubi.cs  FubiInternal.cs  FubiPredefinedGestures.cs  FubiTrackingData.cs  FubiUtils.cs
Samples/Fubi_WPF_GUI/: App.xaml  App.xaml.cs  FubiMouse.cs  KeyboardListener.cs  MainWindow.xaml  MainWindow.xaml.cs  MouseSimulator.cs
Samples/Fubi_WPF_GUI/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Samples/MashataCycle/: MappingMashtaCycle.cpp  MappingMashtaCycle.h  MashtaCycle_main.cpp
Samples/RecognizerTest/: main.cpp
cmake/: FindOpenNI.cmake
include/oscpkt/: udp.hh
tests/: CMakeLists.txt
tests/KinectLogger/: CMakeLists.txt  KinectLogger.pro  QKinectWrapper.cpp  QKinectWrapper.h  QStreamSrv.cpp  QStreamSrv.h  README  cio.cpp  cio.h  cmdline.cpp  cmdline.h  help.html  helpdialog.cpp  helpdialog.h  helpdialog.ui  keyfilter.cpp  keyfilter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  precisetimer.cpp  precisetimer.h  resources.qrc  videoencoderthreaded.cpp  videoencoderthreaded.h  writer.cpp  writer.h  writer_vid.cpp  writer_vid.h
tests/breakpad-qt/: CMakeLists.txt
tests/simpleencdec/: CMakeLists.txt  cio.cpp  mainwindow.cpp  mainwindow.h
weightedinterpolation/: weightedinterpolation.c
