SET(TARGET_NAME "KinectLogger")
IF( USE_QT4 AND USE_OPENNI1 AND USE_BREAKPAD AND USE_FFMPEG AND FFMPEG_FOUND)

	ADD_DEFINITIONS(-DWRITEVIDEO)

	INCLUDE_DIRECTORIES(. ${CMAKE_SOURCE_DIR}/3rdparty/qtffmpegwrapper/QTFFmpegWrapper)

        INCLUDE (${CMAKE_SOURCE_DIR}/cmake/AddQtApp.cmake)
	ADD_QT_EXECUTABLE(${TARGET_NAME})

	ADD_DEPENDENCIES(${TARGET_NAME} qtffmpegwrapper)
	TARGET_LINK_LIBRARIES(${TARGET_NAME} ${LIBLO_LIBRARY} ${OPENNI_LIBRARIES} ${FFTW3_LIBRARY} ${FFMPEG_LIBRARIES} qtffmpegwrapper)

	MESSAGE("[X] ${TARGET_NAME}")

	# Packaging
	SET(PROGNAME "${TARGET_NAME}")
	IF(NOT USE_DEBUG AND (APPLE OR UNIX))
		INCLUDE (${CMAKE_SOURCE_DIR}/CMakeModules/CreatePackage.cmake)
	ENDIF()
ELSE()
	MESSAGE("[ ] ${TARGET_NAME}")
ENDIF()
