SET(TARGET_NAME "simpleencdec")
SET(EXECUTABLE_NAME "simpleencdec")
IF(USE_QT4 AND USE_FFMPEG AND FFMPEG_FOUND)

	ADD_DEFINITIONS(-DWRITEVIDEO)

	SET(MC_PACKAGE_DESCRIPTION_SUMMARY "simpleencdec")

	INCLUDE_DIRECTORIES(. ${CMAKE_SOURCE_DIR}/3rdparty/qtffmpegwrapper/QTFFmpegWrapper)

        INCLUDE (${CMAKE_SOURCE_DIR}/cmake/AddQtApp.cmake)
	ADD_QT_EXECUTABLE(${TARGET_NAME})

	ADD_DEPENDENCIES(${TARGET_NAME} qtffmpegwrapper)
	TARGET_LINK_LIBRARIES(${TARGET_NAME} ${FFMPEG_LIBRARIES} qtffmpegwrapper)

	# Packaging
	SET(PROGNAME "${TARGET_NAME}")
	IF(NOT USE_DEBUG AND (APPLE OR UNIX))
		INCLUDE (${CMAKE_SOURCE_DIR}/cmake/CreatePackage.cmake)
	ENDIF()
	
	#IF ( APPLE )
	#	TARGET_LINK_LIBRARIES(${TARGET_NAME} ${COREFOUNDATION_LIBRARY})
	#ENDIF ( APPLE )
	MESSAGE("[X] ${TARGET_NAME}")
ELSE()
	MESSAGE("[ ] ${TARGET_NAME}")
ENDIF()
